<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_text">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings_text">Настройки</string>
    <string name="dark_theme_text">Темная тема</string>
    <string name="share_app_text">Поделиться приложением</string>
    <string name="send_support_text">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="https_course_android_developer">https://practicum.yandex.ru/android-developer/</string>
    <string name="select_app">Выберите приложение</string>
    <string name="subject_text_mail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="message_text_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="my_mail_yandex">serj1n1o@yandex.ru</string>
    <string name="offer_yandex">https://yandex.ru/legal/practicum_offer/</string>
    <string name="update_button_text">Обновить</string>
    <string name="no_connect_error_txt">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found_txt">Ничего не нашлось</string>
    <string name="base_url_itunes">https://itunes.apple.com</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="track_time">Длительность</string>
    <string name="album_track">Альбом</string>
    <string name="release_date_track">Год</string>
    <string name="genre_track">Жанр</string>
    <string name="country_track">Страна</string>
    <string name="duration_preview_track_default">00:00</string>
    <string name="some_error">ЧТО-ТО ПОШЛО НЕ ТАК</string>
    <string name="server_error_txt">Ошибка сервера</string>
    <string name="favorites_tracks_txt">Избранные треки</string>
    <string name="playlists_txt">Плейлисты</string>
    <string name="favorites_track_is_empty_text">Ваша медиатека пуста</string>
    <string name="new_playlist_txt">Новый плейлист</string>
    <string name="empty_playlist_txt">Вы не создали\nни одного плейлиста</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_playlist">Название*</string>
    <string name="description_playlist">Описание</string>
    <string name="txt_create">Создать</string>
    <string name="cancel_txt">Отмена</string>
    <string name="no_txt">Нет</string>
    <string name="yes_txt">Да</string>
    <string name="finish_txt">Завершить</string>
    <string name="delete_txt">Удалить</string>
    <string name="share_txt">Поделиться</string>
    <string name="save_txt">Сохранить</string>
    <string name="edit_info_txt">Редактировать информацию</string>
    <string name="delete_playlist_txt">Удалить плейлист</string>
    <string name="allert_dialog_txt_lost_data">Все несохраненные данные будут потеряны</string>
    <string name="allert_dialog_txt_finish_creating">Завершить создание плейлиста?</string>
    <string name="allert_dialog_txt_delete_track">Удалить трек</string>
    <string name="allert_dialog_title_delete_playlist">Удалить плейлист</string>
    <string name="allert_dialog_message_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="allert_dialog_message_delete_playlist">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="uploaded_tag_image">image</string>
    <string name="rationale_the_request">Доступ к хранилищу необходим для установки обложки плейлиста</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="track_do_not_add_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="track_add_playlist">Добавлено в плейлист %1$s</string>
    <string name="playlist_covers">myPlaylistsArtworks</string>
    <string name="add_to_playlist_txt">Добавить в плейлист</string>
    <string name="share_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
</resources>