<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/standard_indent_16dp"
    android:paddingEnd="@dimen/standard_indent_16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="@dimen/padding_button_settings"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/button_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/padding_button_settings"
            android:text="@string/settings_text"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_text" />

    </LinearLayout>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_button_settings"
        android:paddingBottom="@dimen/padding_button_settings"
        android:text="@string/dark_theme_text"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="@dimen/text_in_settings" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_button_settings"
        android:paddingBottom="@dimen/padding_button_settings">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/share_app_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_in_settings" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            android:src="@drawable/share_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_button_settings"
        android:paddingBottom="@dimen/padding_button_settings">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/send_support_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_in_settings" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            android:src="@drawable/support_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_button_settings"
        android:paddingBottom="@dimen/padding_button_settings">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/text_in_settings" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            android:src="@drawable/arrow_forward_icon" />
    </LinearLayout>


</LinearLayout>