<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".medialibrary.ui.view.CreatorPlaylistFragment">

    <ImageView
        android:id="@+id/iconBack"
        style="@style/HeaderImageBack"
        android:padding="@dimen/margin_12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerPlaylist"
        style="@style/HeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_12dp"
        android:text="@string/new_playlist_txt"
        app:layout_constraintBottom_toBottomOf="@id/iconBack"
        app:layout_constraintStart_toEndOf="@id/iconBack"
        app:layout_constraintTop_toTopOf="@id/iconBack" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/coverPlaylist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_top_24dp"
        android:layout_marginTop="@dimen/margin_top_42dp"
        android:background="@drawable/artwork_playlist_background"
        android:clickable="true"
        android:scaleType="centerInside"
        android:src="@drawable/btn_add_picture_placeholder"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerPlaylist"
        app:shapeAppearanceOverlay="@style/cornerRadiusPlaylistImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/namePlaylist"
        style="@style/textInputLayoutPlaylist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/standard_indent_16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/name_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coverPlaylist">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            style="@style/textInputEditTextPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionPlaylist"
        style="@style/textInputLayoutPlaylist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/standard_indent_16dp"
        android:layout_marginTop="@dimen/standard_indent_16dp"
        android:hint="@string/description_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/namePlaylist">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDescription"
            style="@style/textInputEditTextPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreatePlaylist"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="@dimen/standard_indent_16dp"
        android:layout_marginBottom="@dimen/padding_button_settings_32dp"
        android:backgroundTint="@color/background_button_create_playlist"
        android:elevation="0dp"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:letterSpacing="0"
        android:text="@string/txt_create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/text_in_settings_16sp"
        app:cornerRadius="@dimen/padding_min_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>